package com.example.ProductionManagementSystem.Constants;

public enum ProcessStatus {
    NEW, PENDING, IN_PROGRESS, COMPLETED
}
